--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,12 @@ Google Assistant, Alexa, Cortana, or Bixby), an event calendar, a media player, 
 digital video camera. 
 <p>
 <img src="IMG_0803">
-<img src="">
-<img src="">
-<img src="">
+  </center>
+<img src="IMG_0840">
+<img src="IMG_0841">
+<img src="IMG_0842">
+<img src="IMG_0843">
+<img src="IMG_0844">
+<img src="IMG_0845">
+  </body>
+  </html>
