--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head> Smartphones </head>
+  <title>Smartphones </title>
   <body>
 <center>
 <h1> TOP SMARTPHONES ACCORDING TO BUDGET <h1>
