--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ to place and receive voice/video cal ls and create and receive text messages, ha
 Google Assistant, Alexa, Cortana, or Bixby), an event calendar, a media player, video games, GPS navigation, digital camera and
 digital video camera. 
 <p>
-<img src="IMG_0839.jpg">
+<img src="IMG_0839.JPG">
   </center>
-<img src="IMG_0840.png">
-<img src="IMG_0841.png">
-<img src="IMG_0842.png">
-<img src="IMG_0843.png">
-<img src="IMG_0844.png">
-<img src="IMG_0845.png">
+<img src="IMG_0840.PNG">
+<img src="IMG_0841.PNG">
+<img src="IMG_0842.PNG">
+<img src="IMG_0843.PNG">
+<img src="IMG_0844.PNG">
+<img src="IMG_0845.PNG">
   </body>
   </html>
