--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ to place and receive voice/video cal ls and create and receive text messages, ha
 Google Assistant, Alexa, Cortana, or Bixby), an event calendar, a media player, video games, GPS navigation, digital camera and
 digital video camera. 
 <p>
-  <img src="IMG_0839.JPG">
+  <img src="IMG_0839.JPG" height="50%" width="50%">
   </center>
-<img src="IMG_0840.PNG">
-<img src="IMG_0841.PNG">
-<img src="IMG_0842.PNG">
-<img src="IMG_0843.PNG">
-<img src="IMG_0844.PNG">
-<img src="IMG_0845.PNG">
+<img src="IMG_0840.PNG" height="50%" width="50%">
+<img src="IMG_0841.PNG" height="50%" width="50%">
+<img src="IMG_0842.PNG" height="50%" width="50%">
+<img src="IMG_0843.PNG" height="50%" width="50%">
+<img src="IMG_0844.PNG" height="50%" width="50%">
+<img src="IMG_0845.PNG" height="50%" width="50%">
   </body>
   </html>
