--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 A smartphone is a mobile personal computer with a mobile operating system with features useful for mobile or handheld use.
 Smartphones, which are typically pocket-sized (as opposed to tablets, which are much larger in measurement), have the ability 
 to place and receive voice/video cal ls and create and receive text messages, have personal digital assistants (such as Siri,
-Google Assistant, Alexa, Cortana, or Bixby), an event calendar, a media player, video games, GPS navigation, digital camera and
+Google Assistant, Alexa, Cortana, or Bixby), an event calendar, a media player, video games, GPS navigation, digital camera 
+and
 digital video camera. 
 <p>
   <img src="IMG_0839.JPG" height="50%" width="50%">
