--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>Smartphones </title>
-  <body>
+  <body bgcolor="red">
 <center>
 <h1> TOP SMARTPHONES ACCORDING TO BUDGET <h1>
 <p> 
