--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ digital video camera.
 <p>
   <img src="IMG_0839.JPG" height="50%" width="50%">
   </center>
-<img src="IMG_0840.PNG" height="20%" width="20%">
+<a href="google.html"><img src="IMG_0840.PNG" height="20%" width="20%"> </a>
 <img src="IMG_0841.PNG" height="20%" width="20%">
 <img src="IMG_0842.PNG" height="20%" width="20%">
 <img src="IMG_0843.PNG" height="20%" width="50%">
