--- a/google.html
+++ b/google.html
@@ -1,7 +1,10 @@
 <html>
 <body>
-  <img src="IMG_0840.PNG"> </img>
-<h1> GOOGLE </h1>
+  <table>
+    <th> <img src="IMG_0840.PNG"> </img> 
+    <th> <font size="50"  GOOGLE
+    
+
 <p>
 1 GOOGLE PIXEL
 </p>
