--- a/google.html
+++ b/google.html
@@ -2,8 +2,8 @@
 <body>
   <table>
     <th> <img src="IMG_0840.PNG"> </img> 
-    <th> <font size="50"  GOOGLE
-    
+  <th> <font size="50">  GOOGLE </font>
+    </table>
 
 <p>
 1 GOOGLE PIXEL
