--- a/google.html
+++ b/google.html
@@ -1,8 +1,8 @@
 <html>
 <body>
   <table>
-    <th> <img src="IMG_0840.PNG"> </img> 
-  <th> <font size="50">  GOOGLE </font>
+    <th> <img src="IMG_0840.PNG"> </img> </th>
+  <th> <font size="50">  GOOGLE </font> </th>
     </table>
 
 <p>
