--- a/google.html
+++ b/google.html
@@ -4,9 +4,7 @@
     <th> <img src="IMG_0840.PNG"> </img> </th>
   <th> <font size="50">  GOOGLE </font> </th>
     </table>
-
-<p>
-1 GOOGLE PIXEL
-</p>
+ GOOGLE PIXEL 
+<img src="IMG_0845.JPG"> 
 </body>
 </html>
