--- a/google.html
+++ b/google.html
@@ -4,7 +4,7 @@
     <th> <img src="IMG_0840.PNG"> </img> </th>
   <th> <font size="50">  GOOGLE </font> </th>
     </table>
- GOOGLE PIXEL 
+<h1> GOOGLE PIXEL </h1> 
 <img src="IMG_0845.JPG"> 
 </body>
 </html>
