--- a/google.html
+++ b/google.html
@@ -2,7 +2,7 @@
 <body>
   <table>
     <th> <img src="IMG_0840.PNG"> </img> </th>
-  <th> <font size="50">  GOOGLE </font> </th>
+  <th> <font size="100">  OOGLE </font> </th>
     </table>
 <h1> GOOGLE PIXEL </h1> 
 <img src="IMG_0845.JPG"> 
