--- a/google.html
+++ b/google.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <table>
-    <th> <img src="IMG_0840.PNG"> </img> </th>
+    <th> <img src="IMG_0840.PNG" height="10%"> </img> </th>
   <th> <font size="100">  OOGLE </font> </th>
     </table>
 <h1> GOOGLE PIXEL </h1> 
