--- a/google.html
+++ b/google.html
@@ -5,6 +5,10 @@
   <th> <font size="100">  OOGLE </font> </th>
     </table>
 <h1> GOOGLE PIXEL </h1> 
+<p> 
+Google Pixel smartphone was launched in October 2016. The phone comes with a 5.00-inch touchscreen display with a resolution
+ of 1080 pixels by 1920 pixels at a PPI of 441 pixels per inch. Google Pixel price in India starts from Rs. 43,500. 
+</p>
 <img src="IMG_0845.JPG"> 
 </body>
 </html>
