--- a/google.html
+++ b/google.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body bgcolor="red">
   <table>
     <th> <img src="IMG_0840.PNG" height="10%"> </img> </th>
   <th> <font size="100">  OOGLE </font> </th>
