--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ digital video camera.
 <p>
   <img src="IMG_0839.JPG" height="50%" width="50%">
   </center>
-<a href="google.html"><img src="IMG_0840.PNG" height="20%" width="20%"> </a>
-<img src="IMG_0841.PNG" height="20%" width="20%">
+<a href="google.html"> <img src="IMG_0840.PNG" height="20%" width="20%"> </a>
+<a href="apple.html"> <img src="IMG_0841.PNG" height="20%" width="20%"> </a>
 <img src="IMG_0842.PNG" height="20%" width="20%">
 <img src="IMG_0843.PNG" height="20%" width="50%">
 <img src="IMG_0844.PNG" height="20%" width="50%">
