--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </p>
     <img src="IMG_0839.JPG" height="30% width="50%">
     <table>
-     <th> <img src="IMG_0840.PNG"> </th>
-     <th> <img src="IMG_0841.PNG"> </th>
-     <th> <img src="IMG_0842.PNG"> </th>
-     <th> <img src="IMG_0843.PNG"> </th>   
+     <th> <img src="IMG_0840.PNG" height="20%" width="15%"> </th>
+     <th> <img src="IMG_0841.PNG" height="20%" width="15%"> </th>
+     <th> <img src="IMG_0842.PNG" height="20%" width="15%"> </th>
+     <th> <img src="IMG_0843.PNG" height="20%" width="15%"> </th>   
      </body>
      <html>
