--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
+  <title> <center> ALL YOU NEED TO KNOW ABOUT SMARTPHONES </center> </title>
   <body>
     <p>
+      A smartphone is a mobile personal computer with a mobile operating system with features useful for mobile or handheld use. 
+      Smartphones, which are typically pocket-sized (as opposed to tablets, which are much larger than a pocket), have the ability to 
+      place and receive voice/video calls and create and receive text messages, have personal digital assistants (such as Siri, Google 
+      Assistant, Alexa, Cortana, Bixby), an event calendar, a media player, video games, GPS navigation, digital camera and video camera.
     </p>
     <img src="IMG_0839.JPG" height="30% width="50%">
     <table>
