--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       place and receive voice/video calls and create and receive text messages, have personal digital assistants (such as Siri, Google 
       Assistant, Alexa, Cortana, Bixby), an event calendar, a media player, video games, GPS navigation, digital camera and video camera.
     </p>
-    <img src="IMG_0839.JPG" height="30% width="50%">
+    <center> <img src="IMG_0839.JPG" height="30% width="50%"> </center>
     <table>
      <th> <img src="IMG_0840.PNG" height="20%" width="20%"> </th>
      <th> <img src="IMG_0841.PNG" height="20%" width="20%"> </th>
