--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title> <center> ALL YOU NEED TO KNOW ABOUT SMARTPHONES </center> </title>
+  <head> <center> ALL YOU NEED TO KNOW ABOUT SMARTPHONES </center> </head>
   <body>
     <p>
       A smartphone is a mobile personal computer with a mobile operating system with features useful for mobile or handheld use. 
@@ -9,10 +9,10 @@
     </p>
     <center> <img src="IMG_0839.JPG" height="30% width="50%"> </center>
     <table>
-     <th> <img src="IMG_0840.PNG" height="20%" width="20%"> </th>
-     <th> <img src="IMG_0841.PNG" height="20%" width="20%"> </th>
-     <th> <img src="IMG_0842.PNG" height="20%" width="20%"> </th>
-     <th> <img src="IMG_0843.PNG" height="20%" width="20%"> </th>   
+     <th> <img src="IMG_0840.PNG" height="20%" width="30%"> </th>
+     <th> <img src="IMG_0841.PNG" height="20%" width="30%"> </th>
+     <th> <img src="IMG_0842.PNG" height="20%" width="30%"> </th>
+     <th> <img src="IMG_0843.PNG" height="20%" width="30%"> </th>   
      </table>
      </body>
      <html>
