--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </p>
     <center> <img src="IMG_0839.JPG" height=50% width="70%"> </center>
     <table>
-     <th> <img src="IMG_0840.PNG" height="20%" width="30%"> </th>
-     <th> <img src="IMG_0841.PNG" height="20%" width="30%"> </th>
-     <th> <img src="IMG_0842.PNG" height="20%" width="30%"> </th>
-     <th> <img src="IMG_0843.PNG" height="20%" width="30%"> </th>   
+      <th> <a href="google.html"> <img src="IMG_0840.PNG" height="30%" width="40%"> </a> </th>
+      <th> <a href="apple.html"> <img src="IMG_0841.PNG" height="30%" width="40%"> </a> </th>
+      <th> <a href="samsung.html"> <img src="IMG_0842.PNG" height="30%" width="40%"> </a> </th>
+      <th> <a href="oneplus.html"> <img src="IMG_0843.PNG" height="30%" width="40%"> </a> </th>   
      </table>
      </body>
      <html>
