--- a/google.html
+++ b/google.html
@@ -9,6 +9,7 @@
 Google Pixel smartphone was launched in October 2016. The phone comes with a 5.00-inch touchscreen display with a resolution
  of 1080 pixels by 1920 pixels at a PPI of 441 pixels per inch. Google Pixel price in India starts from Rs. 43,500. 
 </p>
-<img src="IMG_0845.JPG"> 
+<img src="IMG_0845.JPG">
+<img src="pixel.png">
 </body>
 </html>
