--- a/apple.html
+++ b/apple.html
@@ -1,6 +1,15 @@
 <html>
 <body bgcolor="black" text="red">
-<img src="apple.jpg">
-  <font style="verdana" size="50"> Apple </font>
+<center> <table>
+  <th> <img src="apple.jpg"> </th>
+  <th> <h2> Apple </h2> </th>
+  </table>
+  <img src="iphone.jpg">
+  <p>
+    iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems.
+    The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display.
+    Splash and water resistance.1 And it looks every bit as powerful as it is. 
+  </p>
+  </center>
   </body>
 </html>
