--- a/apple.html
+++ b/apple.html
@@ -4,7 +4,7 @@
   <th> <img src="apple.jpg"> </th>
   <th> <h2> Apple </h2> </th>
   </table>
-  <img src="iphone.jpg">
+  <img src="iphone.png">
   <p>
     iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems.
     The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display.
