--- a/apple.html
+++ b/apple.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="black" text="red">
 <center> <table>
-  <th> <img src="apple.jpg"> </th>
+  <th> <img src="apple.jpg" height="20%" width="15%"> </th>
   <th> <h2> Apple </h2> </th>
   </table>
   <img src="iphone.png">
