--- a/apple.html
+++ b/apple.html
@@ -4,11 +4,19 @@
   <th> <img src="apple.jpg" height="40%" width="55%"> </th>
   <th> <h2> Apple </h2> </th>
   </table>
+  <h2> iPhone 7 </h2>
   <img src="iphone.png">
   <p>
     iPhone 7 dramatically improves the most important aspects of the iPhone experience. It introduces advanced new camera systems.
     The best performance and battery life ever in an iPhone. Immersive stereo speakers. The brightest, most colorful iPhone display.
     Splash and water resistance.1 And it looks every bit as powerful as it is. 
+  </p>
+    <h2> iPhone 7 Plus </h2>
+  <img src="iphone2.png">
+  <p>
+The iPhone 7 Plus introduces the all new dual camera system.  A wide-angle lens which shoots at 12 megapixel and a telephoto lens which
+    zooms upto 10X in photos and 6X in videos. It shoots in 4K. It also introduces Potrait Mode which gives a depth of field effect by
+    blurring the background.
   </p>
   </center>
   </body>
