--- a/samsung.html
+++ b/samsung.html
@@ -1,10 +1,11 @@
 <html>
 <body bgcolor="black" text="red">
 <center>
-<img src="IMG_0843.PNG">
+<img src="IMG_0842.PNG">
 <h2> SAMSUNG </h2>
 <h2> Samsung Galaxy S8 </h2>
 <p>
+  The Infinity Display has an incredible end-to-end screen that spills over the phone
 </p>
 <img src="galaxys8.png">
 </body>
