--- a/samsung.html
+++ b/samsung.html
@@ -5,7 +5,12 @@
 <h2> SAMSUNG </h2>
 <h2> Samsung Galaxy S8 </h2>
 <p>
-  The Infinity Display has an incredible end-to-end screen that spills over the phone
+The Infinity Display has an incredible end-to-end screen that spills over the phone. The Samsung Galaxy S8 is powered by 1.9GHz octa-core
+Samsung Exynos 8895 processor and it comes with 4GB of RAM. The phone packs 64GB of internal storage that can be expanded up to 256GB via
+a microSD card. As far as the cameras are concerned, the Samsung Galaxy S8 packs a 12-megapixel primary camera on the rear and a 8-megapixel
+front shooter for selfies.
+The Samsung Galaxy S8 runs Android 7.0 and is powered by a 3000mAh non removable battery. It measures 148.90 x 68.10 x 8.00 
+(height x width x thickness) and weigh 155.00 grams.
 </p>
 <img src="galaxys8.png">
 </body>
