--- a/samsung.html
+++ b/samsung.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor="black" text="red">
 <center>
-<img src="IMG_0842.PNG">
+<img src="IMG_0842.PNG" width="50%" height="20%">
 <h2> SAMSUNG </h2>
 <h2> Samsung Galaxy S8 </h2>
 <p>
