--- a/apple.html
+++ b/apple.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor="black" text="red">
+<body bgcolor="black" text="white">
 <center> <table>
   <th> <img src="apple.jpg" height="40%" width="55%"> </th>
   <th> <h2> Apple </h2> </th>
