--- a/samsung.html
+++ b/samsung.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor="black" text="red">
+<body bgcolor="black" text="blue">
 <center>
 <img src="IMG_0842.PNG" width="50%" height="20%">
 <h2> SAMSUNG </h2>
