--- a/samsung.html
+++ b/samsung.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+  <title>
+    SAMSUNG
+    </title>
+  </head>
 <body bgcolor="black" text="blue">
 <center>
 <img src="IMG_0842.PNG" width="50%" height="20%">
