--- a/apple.html
+++ b/apple.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+  <title>
+  </title>
+    APPLE
+  </head>
 <body bgcolor="black" text="white">
 <center> <table>
   <th> <img src="apple.jpg" height="40%" width="55%"> </th>
