--- a/oneplus.html
+++ b/oneplus.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+  <title>
+    ONEPLUS
+  </title>
+  </head>
 <body text="red">
 <center>
 <h2> ONEPLUS </h2>
@@ -12,6 +17,7 @@ The OnePlus 5 runs Android 7.1.1 and is powered by a 3300mAh non removable batte
 (height x width x thickness) and weigh 153.00 grams.
 </p>
 <img src="oneplus.jpeg">
+  CLICK <a href="https://oneplusstore.in">HERE </a> FOR MORE INFO ABOUT ONEPLUS
 </center>
 </body>
 </html>
