--- a/google.html
+++ b/google.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+  <title>
+    GOOGLE
+  </title>
+  </head>
 <body text="blue">
   <table>
     <th> <img src="IMG_0840.PNG" height="10%"> </img> </th>
@@ -12,6 +17,7 @@ Google Pixel smartphone was launched in October 2016. The phone comes with a 5.0
 <center>
 <img src="IMG_0845.JPG">
 <img src="pixel.png">
+ FOR MORE INFO ABOUT PIXEL DEVICES CLICK <a href="https://madeby.google.com"> HERE </a>
 </center>
 </body>
 </html>
