--- a/samsung.html
+++ b/samsung.html
@@ -18,5 +18,6 @@ The Samsung Galaxy S8 runs Android 7.0 and is powered by a 3000mAh non removable
 (height x width x thickness) and weigh 155.00 grams.
 </p>
 <img src="galaxys8.png">
+ CLICK <a href="https://www.samsung.com/in/"> HERE </a>FOR MORE INFO ABOUT THE S8 
 </body>
 </html>
