--- a/samsung.html
+++ b/samsung.html
@@ -7,7 +7,7 @@
 <body bgcolor="black" text="blue">
 <center>
 <img src="IMG_0842.PNG" width="50%" height="20%">
-<h2> SAMSUNG </h2>
+<h2 style="color:cyan;"> SAMSUNG </h2>
 <h2> Samsung Galaxy S8 </h2>
 <p>
 The Infinity Display has an incredible end-to-end screen that spills over the phone. The Samsung Galaxy S8 is powered by 1.9GHz octa-core
