--- a/apple.html
+++ b/apple.html
@@ -1,8 +1,11 @@
 <html>
   <head>
   <title>
-  </title>
     APPLE
+  </title>
+    <style>
+      h2  {color:red;}
+      <h2>
   </head>
 <body bgcolor="black" text="white">
 <center> <table>
