--- a/apple.html
+++ b/apple.html
@@ -5,7 +5,7 @@
   </title>
     <style>
       h2  {color:red;}
-      <h2>
+    </style>
   </head>
 <body bgcolor="black" text="white">
 <center> <table>
